# dreamfi-llm

./: .dockerignore  .env.example  .env.local  .gitignore  AGENTS.md  Dockerfile  GETTING_STARTED.md  Makefile  README.md  STATUS.md  TESTING.md  UPGRADE_ROADMAP.md  VERTICAL_SLICE.md  alembic.ini  config.py  conftest.py  design.md  docker-compose.dev.yml  llms.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  requirements.txt  setup.py
.github/workflows/: ci.yml
PRDs/: 00-Master-Delivery-Plan.md  Phase1-Product-Knowledge-Hub.md  Phase2-Document-Generators.md  Phase3-Dragonboat-Jira-Reporting.md  Phase4-Performance-Event-Reporting.md  Phase5-UI-Project-Support.md
autoresearch-toolkit/autoresearch-toolkit/: .gitignore  README.md
config/: feature_flags.yaml  generator_templates.yaml  reporting_config.yaml
deployment/: Dockerfile  docker-compose.dreamfi.yml
docs/: OPTION_D_SUMMARY.md  SESSION_4_COMPLETE.md  outstanding-work.md
docs/adr/: 001-canonical-storage.md  002-search-architecture.md  003-eval-locking-policy.md  004-git-keep-revert-loop.md  005-confidence-model.md  006-hard-gate-publishing.md  007-connector-freshness-policy.md  008-skill-promotion-policy.md  009-onyx-substrate.md  010-dreamfi-db-minimal.md
docs/architecture/: connector-specs.md  onyx-integration.md  skill-registry.md  system-overview.md
docs/contracts/: tier1_skill_contracts.md
dreamfi/: config.py
dreamfi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dreamfi/api/: app.py  deps.py
dreamfi/autoresearch/: loop.py
dreamfi/confidence/: scorer.py
dreamfi/connectors/: __init__.py  base.py
dreamfi/context/: __init__.py  builder.py  bundle.py  litellm_router.py  memory.py  model_router.py  topics.py  watcher.py
dreamfi/db/: models.py  session.py
dreamfi/evals/: loader.py  runner.py
dreamfi/gold/: registry.py
dreamfi/onyx/: client.py  errors.py  models.py
dreamfi/promotion/: gate.py
dreamfi/skills/: engine.py  registry.py
dreamfi/trust/: metrics.py  seeding.py
evals/: agent-system-prompt.md  cold-email.md  landing-page-copy.md  meeting-summary.md  newsletter-headline.md  product-description.md  resume-bullet.md  short-form-script.md  support-agent.md
evals/runners/: run_agent_system_prompt_eval.py  run_cold_email_eval.py  run_landing_page_eval.py  run_meeting_summary_eval.py  run_resume_bullet_eval.py  (+4 more)
generators/: __init__.py  engine.py  voice.py
integrations/: __init__.py  confluence_client.py  dragonboat_client.py  errors.py  google_analytics_client.py  jira_client.py  klaviyo_client.py  ledger_netxd_client.py  metabase_client.py  posthog_client.py  sardine_client.py  socure_client.py
knowledge_hub/: __init__.py
scripts/: bootstrap_local.sh  onyx_seed.py  run_eval_round.py  validate_connectors.py
services/: __init__.py
tests/: test_engine_writes_export_readiness.py  test_publish_guard_uses_readiness.py  test_run_round_emits_drift_events.py  test_seeding_zero_count.py
(+353 files in other folders)
