[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamfi"
version = "0.2.0"
description = "Skill-gated generation and evaluation layer on top of Onyx"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "jinja2>=3.1",
  "anthropic>=0.42",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "tenacity>=9.0",
  "structlog>=24.4",
  "python-multipart>=0.0.9",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.32",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["dreamfi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires live services (docker)",
  "live_onyx: requires a running Onyx",
  "critical: critical-path tests",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["evals/runners/", "tests/"]
